--- a/initial_script.sh.save.1
+++ b/initial_script.sh.save.1
@@ -9,10 +9,8 @@ cd /home/pi/Music/vgmSet
 files=(*.vgm)
 count=0
 ans=""
-end=false
 
 listTracks(){
-  count=0
   echo ""
   echo "files in ~/Music/vgmSet"
   echo ""
@@ -29,24 +27,11 @@ listTracks(){
 selectTrack(){
   echo -n "pleez select your track: "
 
-  read -n 2 ans
+  read -n 1 ans
 
   # need to handle errors here
-  # if detect q exit program
-  # if not a valid  number select again
 
-#  if [ "$ans" = "q" ]
-#  then
-#    return break
-#  fi
-
-#  if [ $ans > ${#files[@]} ]
-#  then
-#    echo eRr0r
-#    echo
-#    selectTrack
-#  fi
-
+  echo ""
   echo ""
 }
 
@@ -57,6 +42,4 @@ playTrack(){
 while :
 do
   listTracks
-  selectTrack
-  playTrack
-done
+  selec
